@startuml
'https://plantuml.com/class-diagram

class MainActivity{
#onCreate(): void
}

class MenueActivity{
#onCreate(): void
-configureButtons(): void
-configureMeldungButton(): void
-configureUebersichtButton(): void
-configureImpressumButton(): void
-configureKontaktButton(): void
-configureDatenschutzButton(): void
}

class MeldungMainActivity{
-dateneingabeFragment: MeldungDateneingabeFragment;
-adresseingabeFragment: AdresseingabeFragment;
-fotoFragment: FotoFragment;
-pruefenFragment: PruefenFragment;

#onCreate(): void
-configureButtons(): void
-configureHomeButton(): void
-configureWeiterButton(): void
-configureZurueckButton(): void
-configureSubmitButton(): void
-wechselZumNaechstenSchirm(): void
-wechselZumVorherigemSchirm(): void
+zeigeFragment(EMeldungsschirm zielSchirm): void
-setzeButtonSichtbarkeit(): void
-schirmWechsel(Fragment fragment): void
-projektEintragen(): void
}
class MeldungDateneingabeFragment{
-editTextMeldung: EditText;
-typeSpinner: Spinner;
-meldung: Meldung;
+onCreateView(LayoutInflater inflater,...): View
-configureSpinner(View view): void;
-configureTextFields(View view): void;
-configureMeldungsInput(View view): void;
+fuelleMeldung(): void;
-getSelectedMeldungsart(): EMeldungsart
}

class AdresseingabeFragment{
-editTextOrt: EditText;
-editTextPostleitzahl: EditText;
-editTextHausnummer: EditText;
-editTextStrasse: EditText;
-meldung: Meldung;
+onCreateView(LayoutInflater inflater,...): View;
-configureTextFields(View view): void;
-configureButtons(View view): void;
-configureGPSButton(View view): void;
-fuelleAdresse(): void;
-void getCurrentLocation(): void;
-getAddressFromLocation(double latitude, double longitude): void;
-requestLocationPermission(): void;
}

class FotoFragment{
-meldung: Meldung;
-photoUri: Uri;
-galleryLauncher ActivityResultLauncher<Intent>;
-onCreateView(LayoutInflater inflater,...) : View
-configureButtons(View view): void;
-checkPermissionAndOpenGallery(): void;
-openGallery(): void;
-checkCameraPermissionAndOpen(): void;
-openCamera(): void;
-createImageUri(): Uri;
}

enum EMeldungsschirm {
ArtUndText
Adresse
Foto
Pruefen
}

class PruefenFragment{
-textMeldung: TextView;
-textAdresse: TextView;
-meldung: Meldung;
-vorschauBild: ImageView;
+onCreateView(LayoutInflater inflater,...):View;
-configureTextviews(View view): void;
-configureButtons(View view): void;
-configureMeldungEditButton(View view): void;
-configureAdressEditButton(View view): void;
-configureImageEditButton(View view): void;
-configureBild(View view): void;
-fuelleInhalte(): void;
-fuelleBild(): void;
}

class MainActivity extends AppCompatActivity
class MenueActivity extends AppCompatActivity
class MeldungMainActivity extends AppCompatActivity
class MeldungDateneingabeFragment extends Fragment
class AdresseingabeFragment extends Fragment
class FotoFragment extends Fragment
class PruefenFragment extends Fragment

MeldungMainActivity --> MeldungDateneingabeFragment
MeldungMainActivity --> AdresseingabeFragment
MeldungMainActivity --> FotoFragment
MeldungMainActivity --> PruefenFragment
@enduml